--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -9,26 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.15.3 0.23.4\n"
+      "1.13.1 0.20.3\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "getcwd() takes no arguments (1 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-1daa74de3953>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_exec_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'G:\\My Drive\\Portfolio\\Esbriet\\Studies\\ML29808(INSPIRATION PLUS)\\IPlus Data\\ARCH coded'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: getcwd() takes no arguments (1 given)"
-     ]
+     "data": {
+      "text/plain": [
+       "'/Users/askming/GitHub/PythonDataScienceHandbook/notebooks'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -256,6 +255,25 @@
     "DF = pd.DataFrame({'State': ['CA', 'TX'], 'Pop': [1234, 5678]})\n",
     "DF"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls = np.linspace(-1, 11)\n",
+    "print(len(ls))\n",
+    "# np.linspace?"
+   ]
   }
  ],
  "metadata": {
@@ -274,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
