--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -773,6 +773,23 @@
     "holidays = cal.holidays('2012', '2016')\n",
     "pd.Series(1, index=holidays, name='holiday')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `sklearn.datasets.make_moons` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sklearn.datasets.make_moons?"
+   ]
   }
  ],
  "metadata": {
@@ -791,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
